# mock-payment-service

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: .env  main.py  settings.py  utils.py
app/endpoints/: __init__.py  payment.py
app/schemas/: __init__.py  payment.py
app/services/: payment.py
app/templates/: base.html  payment-page.html  success.html
